--- a/index.html
+++ b/index.html
@@ -46,8 +46,15 @@
 										<h2>About Me</h2>
 										<p>Hello! My name is Alex Bush. I'm a Senior Computer Science student with a focus in Software Engineering at the University of Texas at San Antonio.</p>
 									</header>
-									<p>I've had a lifelong interest in computers and games, dating as far back as when I built my first computer in 8th grade. My primary interest is <strong>Game Design and Development</strong>. Outside of school, I enjoy collecting manga(my favorite series currently is <em>Jojo's Bizarre Adventure</em>), building model sets and exercising!</p>
-									<p>Below is a list of some of my various technical skills and projects. During my time at UTSA, I've gotten to work on projects in a variety of disciplines, including game design, software development and AI. I hope you find my completed and ongoing projects intriguing!</p>
+									<p>I've had a lifelong interest in computers and games, dating as far back as when I built my first computer in 8th grade. My primary interest is <strong>Gameplay Programming and Game Development</strong>. Outside of school, I enjoy collecting manga(my favorite series currently is <em>Jojo's Bizarre Adventure</em>), building model sets and exercising!</p>
+									<p>Below is a list of some of my various technical skills and projects. I hope you find my completed and ongoing projects intriguing!</p>
+									<p><b><a href="#three">Click here or scroll down to see a list of my projects!</a></b></p>
+									<h1>
+										<ul>
+											<li><a href="https://www.linkedin.com/in/alex-bush-3ba72523a/">Linkedin</a></li>
+											<li><a href="https://github.com/ABBush2001">Github</a></li>
+										</ul>
+									</h1>
 								</div>
 							</section>
 
@@ -56,8 +63,8 @@
 								<div class="container">
 									<h3>Technical Skills</h3>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Proficient in C++, C#, Unity, C, Java, Python and LaTeX</li>
-										<li class="icon solid fa-code">Experience working with Gamemaker Studio 2</li>
+										<li class="icon solid fa-code">Experienced in C++, C#, C and Python</li>
+										<li class="icon solid fa-code">Experience working with Unity Game Engine, source control, git and Plastic SCM</li>
 										<li class="icon solid fa-code">Moderate experience with LISP and Bash</li>
 									</ul>
 								</div>
@@ -67,99 +74,185 @@
 							<section id="three">
 								<div class="container">
 									<h3>Projects</h3>
-									<p>I've worked on a variety of topics in various disciplines, including AI, Robotics and Game Development.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/BST.png"></a>
+											<div class="image"><img src="images/CyberThreatProtectors.PNG" alt="" /></div>
 											<div class="inner">
-												<h4>Data Structures and Algorithms</h4>
-												<p>Throughout my undergraduate career, I've completed various projects implementing and designing different data structures and algorithms, including heapsort, binary search trees, the knapsack problem and more. A link to a repository containing these projects can be found <a href="https://github.com/ABBush2001/Projects">here.</a></p>
+												<h4>Cyber Threat Protectors - ONGOING</h4>
+												<h1><a href="https://github.com/ABBush2001/Cyber-Threat-Protectors">Repository</a></h1>
+												<h1><a href="https://nipshot.itch.io/cyber-threat-protectors-digital-alpha">Link To Play</a></h1>
+												<p>
+													<ul>
+														<li>Developing a video game adaptation of the Cyber Threat Protectors card game</li>
+														<li>Developed turn-based gameplay, points and card effects system using C# Scripting</li>
+														<li>Implemented visual effects including in-game animations using the Unity LeanTween library</li>
+														<li>Utilized git and Github for source control</li>
+													</ul>
+												</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/Descent.png"></a>
+											<div class="image"><img src="images/Descent.png"></div>
 											<div class="inner">
 												<h4>The Descent 3D</h4>
-												<p>Made as an entry to the 2023 <i>Rowdyhacks</i> 24-hour hackathon, this 3D remake of my previous title <i>The Descent</i> Reimagines the ocean horror game in the style of a creepy, low-poly adventure. Developed in Unity's Universal Render Pipeline and utilizing the LeanTween, Cinemachine and Ink Integration libraries, A link to a repository containing this project (with a link to play the title!) can be found <a href="https://github.com/akon117/TheDescent3D">here.</a></p>
+												<h1><a href="https://github.com/akon117/TheDescent3D">Repository</a></h1>
+												<h1><a href="https://nipshot.itch.io/the-descent-3d">Link To Play</a></h1>
+												<p>
+													<ul>
+														<li>A 3D Unity horror game developed in the Universal Render Pipeline (URP)</li>
+														<li>Developed player movement system using C# scripting</li>
+														<li>Developed event triggers with Unity colliders and C#</li>
+														<li>Developed shaders using UnityShaderGraph</li>
+														<li>Implemented textures with normal maps</li>
+														<li>Utilized Unity libraries including LeanTween and Ink</li>
+														<li>Utilized git and Github for source control</li>
+														<li>Successfully exported the game to a WebGL format and hosted it on itch.io</li> 
+													</ul>
+												</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/BossRush.PNG"></a>
+											<div class="image"><img src="images/BossRush.PNG"></div>
 											<div class="inner">
 												<h4>Boss Rush</h4>
-												<p>Made as a submission to the <i>7DFPS</i> week-long game jam, this Unity game takes on the style of a classic doom-style shooter, as players assume the role of an office worker completeing tasks to quell the rage of their angry boss. See the repository for this project with a link to play the game <a href="https://github.com/ABBush2001/7DFPS">here.</a></p>
+												<h1><a href="https://github.com/ABBush2001/7DFPS">Repository</a></h1>
+												<h1><a href="https://nipshot.itch.io/boss-rush">Link To Play</a></h1>
+												<p><ul>
+														<li>A Unity game in the style of a classic doom-style shooter</li>
+														<li>Developed systems for game task management, movement and display of 2D tiles as 3D prefabs using C# scripting</li>
+														<li>Imported and implemented textures</li>
+														<li>Implemented in-game audio design</li>
+														<li>Utilized git and Github for source control</li>
+														<li>Successfully exported the game to a WebGL format and hosted it on itch.io</li>
+													</ul>
+												</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/CookieCrumble.PNG"></a>
+											<div class="image"><img src="images/CookieCrumble.PNG"></div>
 											<div class="inner">
 												<h4>Cookie Crumble!</h4>
-												<p>placing in the top 10% of games for innovation out of 562 entries in the Github <i>Game Off 2022</i> month-long game jam, this Unity game mixes 2D and 3D environments as players play through a cutesy series of mini-games that are more than what they seem. See the repository for this project with a link to play the game <a href="https://github.com/ABBush2001/GameOff2022">here.</a></p>
+												<h1><a href="https://github.com/ABBush2001/GameOff2022">Repository</a></h1>
+												<h1><a href="https://nipshot.itch.io/cookie-crumble">Link To Play</a></h1>
+												<p><ul>
+														<li>Unity game that mixes 2D and 3D elements</li>
+														<li>placed in the top 10% of games for innovation out of 562 entries in the Github <i>Game Off 2022</i> month-long game jam</li>
+														<li>Developed systems for dialogue, event triggers, scene management and game mechanics for all 2D game sections using C# scripting</li>
+														<li>Imported and implemented all sprites for 2D Game sections</li>
+														<li>Developed User Interface using Unity's UI tools</li>
+														<li>Utilized git and Github for source control</li>
+														<li>Successfully exported the game to a WebGL format and hosted it on itch.io</li>
+													</ul>
+												</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/descent.png"></a>
+											<div class="image"><img src="images/Descent2D.png"></div>
 											<div class="inner">
 												<h4>The Descent</h4>
-												<p>Placing 3rd for audio design, 5th for theme adherence and 8th overall out of 60 entries to the <i>Spooky 2D Jam 2022</i> 48 hour game jam, this 2D Unity horror game has players navigate a submarine on its descent into the depths of the sea. See the repository for this project with a link to play the game <a href="https://github.com/ABBush2001/SpookyJam2022">here.</a></p>
+												<h1><a href="https://github.com/ABBush2001/SpookyJam2022">Repository</a></h1>
+												<h1><a href="https://nipshot.itch.io/the-descent">Link To Play</a></h1>
+												<p><ul>
+														<li>2D game built in Unity</li>
+														<li>Placed 3rd for audio design, 5th for theme adherence and 8th overall out of 60 entries to the <i>Spooky 2D Jam 2022</i> 48 hour game jam</li>
+														<li>Developed systems for dialogue, component management and player controls and movement using C# scripting</li>
+														<li>Implemented level design, lighting and event triggers using Unity game objects, lighting system and colliders</li>
+														<li>Designed and implemented menu systems using Unity UI</li>
+														<li>Utilized git and Github for source control</li>
+														<li>Performed a post mortem with project teammates to evaluate the game and where it could be improved</li>
+														<li>Successfully exported the game to a WebGL format and hosted it on itch.io</li>
+													</ul>
+												</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/RTS-Nodes.png"></a>
+											<div class="image"><img src="images/RTS-Nodes.png"></div>
 											<div class="inner">
 												<h4>RTS-Nodes</h4>
-												<p>Developed in C++ and Python, this project presents a generic Real Time Strategy(RTS) game inventory management system, using C++ STL Containers to manage an inventory of items, and Python's Tkinter library to create a GUI through which users can interact with said inventory. See the repository for this project <a href="https://github.com/ABBush2001/RTS-Nodes">here.</a></p>
+												<h1><a href="https://github.com/ABBush2001/RTS-Nodes">Repository</a></h1>
+												<p><ul>
+														<li>A C++ and Python project that presents a generic Real Time Strategy(RTS) game inventory management system</li>
+													</ul>
+												</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/SAVEXCAMEE.png"></a>
+											<div class="image"><img src="images/SAVEXCAMEE.png"></div>
 											<div class="inner">
 												<h4>SAVE X CAMEE Project</h4>
-												<p>As a research assistant for Dr. John Quarles, I worked with fellow students on a collaborative research project between the San Antonio Virtual Environments Lab (SAVE) and the NASA Center for Advanced Measurements in Extreme Environments (CAMEE). In this project, I helped develop a Unity application for real-time data visualization in Augmented Reality for wildfires, which hopefully will be used by NASA researchers and firefighters to help study and combat wildfires. For this project, I primarily worked on developing a heatmap visualization for wildfire temperatures, that can take in real-world data and present it on a 3D surface. A link to the repository containing my work (and to play it!) can be found <a href="https://github.com/ABBush2001/HeatmapDemo">here.</a></p>
+												<h1><a href="https://github.com/ABBush2001/HeatmapDemo">Repository</a></h1>
+												<h1><a href="https://nipshot.itch.io/heatmap-demo">Link To Play</a></h1>
+												<p>
+													<ul>
+														<li>Unity temperature visualization</li>
+														<li>Developed Unity heatmap shader in HLSL based on similar shaders found through research</li>
+														<li>Developed system for processing Json data and sending results to shader for visualization using C# Scripting</li>
+														<li>Utilized Unity UI to create a user interface for interacting with the temperature visualization</li>
+													</ul>
+												</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/SELENAVR.PNG" alt="" /></a>
+											<div class="image"><img src="images/SELENAVR.PNG" alt="" /></div>
 											<div class="inner">
 												<h4>SELENA VR</h4>
-												<p>As an intern at non-profit Resilience Inc, I worked as a Unity developer on <i>SELENA VR</i>, a Unity VR game meant to teach K-12 children and young adults about Social-Emotional Learning. See the SideQuest storepage for this project <a href="https://sidequestvr.com/app/2949">here.</a></p>
+												<h1><a href="https://sidequestvr.com/app/2949/selena-vr">Link To Store Page</a></h1>
+												<p>
+													<ul>
+														<li>Developed a Unity Virtual Reality game called SELENA VR</li>
+														<li>Developed event triggers using Unity colliders and C# Scripting</li> 
+														<li>Developed visual effects including particle effects, lighting and cutscenes using Unity’s lighting system, post-processing effects and C# Scripting</li>
+														<li>Utilized Plastic SCM for source control</li>
+													</ul>
+												</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/CyberThreatProtectors.PNG" alt="" /></a>
-											<div class="inner">
-												<h4>Cyber Threat Protectors</h4>
-												<p>ONGOING: In collaboration with the UTSA Center for Infrastructure Assurance and Security(CIAS), I have been developing a desktop card game in Unity for elementary-aged children to help teach cyber-security principles. Being developed with the help of one of my peers, We aim to have the first version of <i>Cyber Threat Protectors</i> complete by the end of Spring 2023. See the repository for this project and a link to play the current alpha release <a href="https://github.com/ABBush2001/Cyber-Threat-Protectors">here.</a></p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/UIProject.PNG" alt="" /></a>
+											<div class="image"><img src="images/UIProject.PNG" alt="" /></div>
 											<div class="inner">
 												<h4>10 Seconds To Mars</h4>
-												<p>Over the course of the Spring 2022 semester, I worked with other students in my User Interfaces course to develop a Unity clicker game, with special focus being given to the UI/UX experience. See the repository for this project <a href="https://github.com/ViswaB/UI-game_project">here.</a></p>
+												<h1><a href="https://github.com/ViswaB/UI-game_project">Repository</a></h1>
+												<h1><a href="https://www.youtube.com/watch?v=GfpR_mkCEUU&ab_channel=AlexandraBus">Link To Video Demo and User Study</a></h1>
+												<p>
+													<ul>
+														<li>Unity 2D clicker-game project for my User Interfaces course</li>
+														<li>Developed “clicking” mechanic and points system using C# Scripting</li>
+														<li>Organized team with a Scrum development approach as project manager</li>
+														<li>Conducted user study to evaluate gameplay and UI/UX</li>
+													</ul>
+												</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/ArtCentral.png" alt="" /></a>
+											<div class="image"><img src="images/BST.png"></div>
+											<div class="inner">
+												<h4>Data Structures and Algorithms</h4>
+												<h1><a href="https://github.com/ABBush2001/Projects">Repository</a></h1>
+												<p>Throughout my undergraduate career, I've completed various projects implementing and designing different data structures and algorithms, including heapsort, binary search trees, the knapsack problem and more.</p>
+											</div>
+										</article>
+										<!--
+										<article>
+											<div class="image"><img src="images/ArtCentral.png" alt="" /></div>
 											<div class="inner">
 												<h4>Art Central: For All Your Needs In Art!</h4>
 												<p>Over the course of the Spring 2022 semester, I worked with other students in my Software Engineering course to develop an e-commerce website, utilizing SQL, PHP, Javascript, HTML and CSS in our approach. I served as project manager, utilzing Scrum in order to make sure our project was finished quickly and efficiently. See the repository for this project <a href="https://github.com/ABBush2001/CS3773_001-Final-Project">here.</a></p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/ai.jpg" alt="" /></a>
+											<div class="image"><img src="images/ai.jpg" alt="" /></div>
 											<div class="inner">
 												<h4>SAMSAT Chatbot AI</h4>
 												<p>While interning at the San Antonio Museum of Science And Technology, I worked on developing a "chatbot" exhibit, in which two animatronic heads, each representing an Artificial Intelligence, held a conversation with each other. The goal of this exhibit was to provide a visual display of Artificial Intelligence to museum goers, and thanks to this project I gained experience working with Raspberry Pis, Artificial Intelligence, and Python Libraries.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/Nintendo.PNG" alt="" /></a>
+											<div class="image"><img src="images/Nintendo.PNG" alt="" /></div>
 											<div class="inner">
 												<h4>Ninten-Do: Desktop checklist application</h4>
 												<p>Developed in Java as part of UTSA's Application Programming Course, <i>Ninten-Do</i> is a desktop application that helps users manage various daily tasks in a fun, game-like style. Users can acquire "points," defeat "bosses" and increase their "level" by completing various tasks. As part of the group, my responsibilities included developing the "Stats" screen, in which users could view information about their account, as well as developing the UML diagram that represented the application. See the repository for this project <a href="https://github.com/thousandSun/Ninten-Do">here.</a></p>
 											</div>
-										</article>
+										</article>-->
 									</div>
 								</div>
 							</section>
