--- a/index.html
+++ b/index.html
@@ -76,6 +76,23 @@
 									<h3>Projects</h3>
 									<div class="features">
 										<article>
+											<div class="image"><img src="images/MKit.PNG" alt="" /></div>
+											<div class="inner">
+												<h4>Meowdevial Kitchen!</h4>
+												<h1><a href="https://github.com/ABBush2001/MeowdevialKitchen">Repository</a></h1>
+												<h1><a href="https://nipshot.itch.io/meowdevi">Link To Play</a></h1>
+												<p>
+													<ul>
+														<li>A 2D Unity Casual-Cooking Simulator</li>
+														<li>Developed core gameplay systems including drag and drop, score management, ‘customer’ spawning and minigame mechanics using C# scripting</li>
+														<li>Implemented visual effects using Unity post-processing and the LeanTween Unity library</li>
+														<li>Utilized git and Github for source control</li>
+														<li>Successfully exported the game to a WebGL format and hosted it on itch.io</li>
+													</ul>
+												</p>
+											</div>
+										</article>
+										<article>
 											<div class="image"><img src="images/CyberThreatProtectors.PNG" alt="" /></div>
 											<div class="inner">
 												<h4>Cyber Threat Protectors - ONGOING</h4>
