--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<h3>Projects</h3>
 									<div class="features">
 										<article>
-											<div class="image"><img src="images/MKit.PNG" alt="" /></div>
+											<div class="image"><img src="images/MKit.png" alt="" /></div>
 											<div class="inner">
 												<h4>Meowdevial Kitchen!</h4>
 												<h1><a href="https://github.com/ABBush2001/MeowdevialKitchen">Repository</a></h1>
