--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>About Me</h2>
-										<p>Hello! My name is Alex Bush. I'm a Senior Computer Science student with a focus in Software Engineering at the University of Texas at San Antonio.</p>
+										<p>Hello! My name is Alex Bush. I'm a recent Computer Science graduate from the University of Texas at San Antonio.</p>
 									</header>
 									<p>I've had a lifelong interest in computers and games, dating as far back as when I built my first computer in 8th grade. My primary interest is <strong>Gameplay Programming and Game Development</strong>. Outside of school, I enjoy collecting manga(my favorite series currently is <em>Jojo's Bizarre Adventure</em>), building model sets and exercising!</p>
 									<p>Below is a list of some of my various technical skills and projects. I hope you find my completed and ongoing projects intriguing!</p>
@@ -65,7 +65,7 @@
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Experienced in C++, C#, C and Python</li>
 										<li class="icon solid fa-code">Experience working with Unity Game Engine, source control, git and Plastic SCM</li>
-										<li class="icon solid fa-code">Moderate experience with LISP and Bash</li>
+										<li class="icon solid fa-code">Experience with Object-Oriented programming, Gameplay programming, debugging and testing, and secure software development and analysis</li>
 									</ul>
 								</div>
 							</section>
