--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>I'm always looking for opportunities and I'd love to hear from you! If you're interested in contacting me, you can always reach me at my university email, alex.bush@my.utsa.edu, or my personal email, alexbush2001@yahoo.com.</p>
+									<p>I'm always looking for opportunities and I'd love to hear from you! If you're interested in contacting me, you can reach me on linkedin or at my email, alexbush2001@yahoo.com.</p>
 								</div>
 							</section>
 
