--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/profileImage.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Alex Bush</a></h1>
-					<p>Computer Science Major and Honors student at UTSA</p>
+					<p>Computer Scientist and Game Developer</p>
 				</header>
 				<nav id="nav">
 					<ul>
