--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 								<div class="container">
 									<header class="major">
 										<h2>About Me</h2>
-										<p>Hello! My name is Alex Bush. I'm a recent Computer Science graduate from the University of Texas at San Antonio.</p>
+										<p>Hello! My name is Alex Bush. I'm a Computer Science graduate from the University of Texas at San Antonio, and am now studying Game Development at Northwest Vista College.</p>
 									</header>
-									<p>I've had a lifelong interest in computers and games, dating as far back as when I built my first computer in 8th grade. My primary interest is <strong>Gameplay Programming and Game Development</strong>. Outside of school, I enjoy collecting manga(my favorite series currently is <em>Jojo's Bizarre Adventure</em>), building model sets and exercising!</p>
+									<p>I've had a lifelong interest in computers and games, dating as far back as when I built my first computer in 8th grade. My primary interest is <strong>Gameplay Programming, Game Testing and Game Development</strong>. Outside of school, I enjoy collecting manga(my favorite series currently is <em>Jojo's Bizarre Adventure</em>), building model sets and playing games like <em>Dungeons and Dragons</em> and <em>Magic the Gathering</em>!</p>
 									<p>Below is a list of some of my various technical skills and projects. I hope you find my completed and ongoing projects intriguing!</p>
 									<p><b><a href="#three">Click here or scroll down to see a list of my projects!</a></b></p>
 									<h1>
@@ -63,9 +63,10 @@
 								<div class="container">
 									<h3>Technical Skills</h3>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Experienced in C++, C#, C and Python</li>
-										<li class="icon solid fa-code">Experience working with Unity Game Engine, source control, git and Plastic SCM</li>
+										<li class="icon solid fa-code">Experienced in C++, C#, C, Java and Python</li>
+										<li class="icon solid fa-code">Experience working with Unreal and Unity Game Engines, source control, git and Plastic SCM</li>
 										<li class="icon solid fa-code">Experience with Object-Oriented programming, Gameplay programming, debugging and testing, and secure software development and analysis</li>
+										<li class="icon solid fa-code">Experience with Windows, Linux, MacOS, Microsoft Office and Google Suite</li>
 									</ul>
 								</div>
 							</section>
