--- a/index.html
+++ b/index.html
@@ -79,6 +79,24 @@
 										<article>
 											<div class="image"><img src="images/MKit.png" alt="" /></div>
 											<div class="inner">
+												<h4>Ghostslinger</h4>
+												<h1><a href="https://github.com/ABBush2001/Ghostslinger">Repository</a></h1>
+												<h1><a href="https://nipshot.itch.io/ghostslinger">Link To Play</a></h1>
+												<p>
+													<ul>
+														<li>A Unity 3d Top-Down Third Person Shooter</li>
+														<li>Developed core gameplay systems including player movement, time management, enemy 'ghost' spawning and in-game weapons using C# scripting</li>
+														<li>Implemented visual effects and user interfaces using Unity post-processing and TextMeshPro under the URP</li>
+														<li>Developed enemy AI using Unity Navmesh tools</li>
+														<li>Utilized git and Github for source control</li>
+														<li>Successfully exported the game to a WebGL format and hosted it on itch.io</li>
+													</ul>
+												</p>
+											</div>
+										</article>
+										<article>
+											<div class="image"><img src="images/MKit.png" alt="" /></div>
+											<div class="inner">
 												<h4>Meowdevial Kitchen!</h4>
 												<h1><a href="https://github.com/ABBush2001/MeowdevialKitchen">Repository</a></h1>
 												<h1><a href="https://nipshot.itch.io/meowdevi">Link To Play</a></h1>
