--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									<h3>Projects</h3>
 									<div class="features">
 										<article>
-											<div class="image"><img src="images/MKit.png" alt="" /></div>
+											<div class="image"><img src="images/Game_Cover.jpeg" alt="" /></div>
 											<div class="inner">
 												<h4>Ghostslinger</h4>
 												<h1><a href="https://github.com/ABBush2001/Ghostslinger">Repository</a></h1>
