--- a/index.html
+++ b/index.html
@@ -77,6 +77,22 @@
 									<h3>Projects</h3>
 									<div class="features">
 										<article>
+											<div class="image"><img src="images/DWEscapeLogo.png" alt="" /></div>
+											<div class="inner">
+												<h4>Deepwater Escape</h4>
+												<h1><a href="https://github.com/ABBush2001/DeepwaterEscape">Repository</a></h1>
+												<h1><a href="https://crackedconch.itch.io/deepwater-escape">Link To Play</a></h1>
+												<p>
+													<ul>
+														<li>Led multi-disciplinary team in the development of a 3rd-person shooter/platformer game, developed in Unity 3D</li>
+														<li>Developed project documentation and performed project management activities</li>
+														<li>Developed core game features, including dialogue management, camera movement for in-game cutscenes and camera positioning for the player controller using C# Scripting</li>
+														<li>Presented the project to the public audience and performed a post-mortem to evaluate development approaches</li>
+													</ul>
+												</p>
+											</div>
+										</article>
+										<article>
 											<div class="image"><img src="images/Game_Cover.jpeg" alt="" /></div>
 											<div class="inner">
 												<h4>Ghostslinger</h4>
